--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
         <th>CSV string:</th> <!-- autofocus attribute is HTML5 -->
         <td><textarea autofocus cols = "80" rows = "5" id="original" onchange="calculate();"></textarea></td> 
       </tr>
-      <tr>
-        <th><button type="button">Fields:</button></th>
-      </tr>
     </table>
+    <button type="button">Fields:</button><br>
     <span class="output" id="converted"></span>
   </body>
 </html>
