--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <table>
       <tr>
         <th>CSV string:</th> <!-- autofocus attribute is HTML5 -->
-        <td><textarea autofocus cols = "80" rows = "5" id="original" onchange="calculate();"></textarea></td> 
+        <td><textarea autofocus cols = "80" rows = "5" id="original"></textarea></td> 
       </tr>
     </table>
-    <button type="button">Fields:</button><br>
+    <button type="button" onclick="calculate();">Fields:</button><br>
     <span class="output" id="converted"></span>
   </body>
 </html>
