Now conforms a bit more to wikipedia description of CSV

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <td><textarea autofocus cols = "80" rows = "5" id="original"></textarea></td> 
       </tr>
     </table>
-    <button type="button" onclick="calculate();">Fields:</button><br>
+    <button type="button" onclick="calculate();">table:</button><br>
     <span class="output" id="converted"></span>
   </body>
 </html>
