--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <title>CSV Analyzer</title>
-      <link href="global.css" rel="stylesheet" type="text/css">
+     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+     <title>CSV Analyzer</title>
+     <link href="global.css" rel="stylesheet" type="text/css">
 
+     <script type="text/javascript" src="../../underscore/underscore.js"></script>
      <script type="text/javascript" src="csv.js"></script>
   </head>
   <body>
