coloring even rows in the table

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Comma Separated Value Analyzer</h1>
     <div>
-      Write a CSV string. It produces the corresponding HTML table
+      <i>Write a CSV string. Click the table button. The program outputs a table with the specified data.</i>
     </div>
     <table>
       <tr>
@@ -20,6 +20,6 @@
       </tr>
     </table>
     <button type="button">table:</button><br>
-    <span class="output" id="converted"></span>
+    <span class="output" id="finaltable"></span>
   </body>
 </html>
