--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
      <title>CSV Analyzer</title>
      <link href="global.css" rel="stylesheet" type="text/css">
 
-     <script type="text/javascript" src="../../underscore/underscore.js"></script>
-     <script type="text/javascript" src="../../jquery/starterkit/jquery.js"></script>
+     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
      <script type="text/javascript" src="csv.js"></script>
   </head>
   <body>
