--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
      <script type="text/javascript" src="csv.js"></script>
+     <script type="text/javascript" src="main.js"></script>
      <script type="text/html" id='fillTable'>
        <table id="result" class="center">
          <% _.each(items, function(name) { %>
