--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <body>
     <h1>Comma Separated Value Analyzer</h1>
     <div>
+      <p><i> Go to the <a href="https://github.com/crguezl/csv">repo</a>.</i></p>
       <i>Write a CSV string. Click the table button. The program outputs a table with the specified data.</i>
     </div>
     <table>
